--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Hack Academy",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
