--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,12 @@ APP_NAME=
 SESSION_SECRET=
 SESSION_CREDENTIAL=
 
-MAILSLURP_API_KEY=
+SENDGRID_APIKEY=
+
+GA_MEASUREMENT_ID=
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
 
 DB_CONNECTION=
 DB_HOST=
