--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "method-override": "^3.0.0",
     "mysql2": "^3.1.1",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.28.0",
