--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^3.1.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.28.0",
